# Epitech

./: README.md
Tek1/BSQ/: Makefile
Tek1/BSQ/include/: compute.h  error.h  free_memory.h  map.h  square.h
Tek1/BSQ/src/: compute.c  error.c  free_memory.c  main.c  map.c  square.c
Tek1/myHunter/: Makefile  assets.c  events.c  free.c  my_hunter.c  window.c
Tek1/myHunter/include/: Event.h  Sprite.h  my.h  struct.h
Tek1/myHunter/lib/my/: Makefile  disp_stdarg.c  my_atoi.c  my_compute_power_rec.c  my_isneg.c  my_itoa.c  my_long_put_nbr.c  my_octal.c  my_put_nbr.c  my_putchar.c  my_putstr.c  my_revstr.c  my_short_put_nbr.c  my_show_word_array.c  my_strcat.c  my_strcmp.c  my_strcpy.c  my_strdup.c  my_strlen.c  my_strncat.c  my_strncpy.c  my_strstr.c  my_swap.c  my_unsigned_put_nbr.c  sum_stdarg.c
Tek2/compressor/: Makefile  package.yaml
Tek2/compressor/src/: Args.hs  Check.hs  Cluster.hs  Data.hs  Image.hs  Main.hs  Print.hs  Utils.hs
Tek2/minilibc/: Makefile
Tek2/minilibc/src/: memcpy.asm  memmove.asm  memset.asm  rindex.asm  strcasecmp.asm  strchr.asm  strcmp.asm  strcspn.asm  strlen.asm  strncmp.asm  strpbrk.asm  strstr.asm
Tek2/myFTP/: Makefile
Tek2/myFTP/includes/: my_ftp.h
Tek2/myFTP/src/server/: commands.c  error.c  main.c  server.c  utils.c
Tek2/myFTP/src/server/commands/: cdup.c  cwd.c  dele.c  help.c  list.c  noop.c  pass.c  pasv.c  port.c  pwd.c  quit.c  retr.c  stor.c  user.c
Tek2/myMarvin/: my_marvin.yml
Tek2/myTeams/: .gitignore  CMakeLists.txt
Tek2/wolfram/: Makefile  package.yaml
Tek2/wolfram/src/: Args.hs  Main.hs  Rules.hs  Utils.hs  Wolfram.hs
Tek3/area/: README.md  docker-compose.yml
Tek3/area/server/Controllers/: GithubController.cs
Tek3/area/server/Services/OAuthService/: OAuthService.cs
Tek3/babel/.github/workflows/: deploy.yml
Tek3/bernstein/: cadvisor.daemonset.yaml  poll.deployment.yaml  poll.ingress.yaml  poll.service.yaml  postgres.configmap.yaml  postgres.deployment.yaml  postgres.secret.yaml  postgres.service.yaml  postgres.volume.yaml  redis.configmap.yaml  redis.deployment.yaml  redis.service.yaml  result.deployment.yaml  result.ingress.yaml  result.service.yaml  traefik.deployment.yaml  traefik.rbac.yaml  traefik.service.yaml  worker.deployment.yaml
Tek3/dashboard/: docker-compose.yml
Tek3/whanos/: .gitignore
Tek3/whanos/images/befunge/base/: Dockerfile
Tek3/whanos/images/befunge/standalone/: Dockerfile
Tek3/whanos/images/c/base/: Dockerfile
Tek3/whanos/images/c/standalone/: Dockerfile
Tek3/whanos/images/java/base/: Dockerfile
Tek3/whanos/images/javascript/base/: Dockerfile
Tek3/whanos/images/javascript/standalone/: Dockerfile
Tek3/whanos/images/python/base/: Dockerfile
Tek3/whanos/images/python/standalone/: Dockerfile
